<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="paPositions" Id="{fcc1c96a-058d-4aab-9922-8cef9e680d59}">
    <Declaration><![CDATA[TYPE paPositions :
STRUCT
	cor: INT;
	color: DWORD;
	numOF: STRING;
	lote: STRING;
	text: string;
	class: REAL;
	pot: REAL;
	reator: BOOL:= TRUE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>